[package]
name = "notion-into-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }

serde = "1.0.136"
serde_json = "1.0"

log = "0.4.0"
env_logger = "0.9.0"

rusqlite = "0.27.0"

clap = { version = "3.1.6", features = ["derive"] }

[dev-dependencies]
serial_test = "0.6.0"
