[package]
name = "notion-into-sqlite"
version = "0.1.0"
description = "Download Notion's database and save it locally into SQLite"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/FujiHaruka/notion-into-sqlite"
keywords = ["Notion", "SQLite"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }

serde = "1.0.136"
serde_json = "1.0"

log = "0.4.0"
env_logger = "0.9.0"

rusqlite = "0.27.0"

clap = { version = "3.1.6", features = ["derive"] }
anyhow = "1.0.56"

[dev-dependencies]
regex = "1.5"
